# libretrocore_cpp

./: CMakeLists.txt
src/: libretro.cpp
